# src/api/gen/model/index.ts
@@ -206,6 +206,7 @@ export * from './reorderContentReq.ts';
 export * from './reportEditIncidentReq.ts';
 export * from './reportEditIncidentReqFileKind.ts';
 export * from './reportEditIncidentReqKind.ts';
+export * from './reportEditIncidentReqReason.ts';
 export * from './requestAccountDeletionReq.ts';
 export * from './resourceEffect.ts';
 export * from './resourceEffectOperation.ts';
@@ -241,6 +242,7 @@ export * from './sourceCheckpointSaved.ts';
 export * from './sourceCollaborationToken.ts';
 export * from './sourceCollaborationTokenAccess.ts';
 export * from './sourceEpochReset.ts';
+export * from './sourceEpochResetOutputBody.ts';
 export * from './sourceFailureInputBody.ts';
 export * from './sourceImportAccepted.ts';
 export * from './sourceImportRejected.ts';
